--- a/estate_vehicle/views/estate_vehicle_timesheet.xml
+++ b/estate_vehicle/views/estate_vehicle_timesheet.xml
@@ -102,6 +102,6 @@
          <menuitem id="estate_vehicle_timesheet_activity" name="Vehicle Timesheet"
                   parent="estate_vehicle.estate_vehicle_timesheet_menu"
                   action="action_estate_timesheet_activity_transport"
-                  groups="base.group_no_one" sequence="12"/>
+                 groups="fleet.group_fleet_manager" sequence="12"/>
     </data>
 </openerp>
