--- a/estate_workshop/views/estate_mecanic_timesheet.xml
+++ b/estate_workshop/views/estate_mecanic_timesheet.xml
@@ -9,7 +9,7 @@
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <tree editable="bottom">
-                    <field name="employee_id" string="Employee"/>
+                    <field name="employee_id" options="{'no_create_edit': True}" string="Employee"/>
                 </tree>
             </field>
          </record>
@@ -65,7 +65,7 @@
                     <field name="asset_id" string="Asset" options="{'no_create_edit': True}"/>
                     <field name="vehicle_id" invisible="1" readonly="0"/>
                     <field name="employee_id" string="Employee" options="{'no_create_edit': True}"/>
-                    <field name="mastertask_id" string="Master Task"/>
+                    <field name="mastertask_id" options="{'no_create_edit': True}" string="Master Task"/>
                     <field name="task_id" string="Task" options="{'no_create_edit': True}"/>
                     <field name="start_time" class="input-start-time" widget="float_time" string="Start Time"/>
                     <field name="end_time" class="input-end-time" widget="float_time" string="End Time"/>
@@ -89,12 +89,12 @@
          <menuitem id="estate_mecanic_timesheet_activity" name="Mecanic Timesheet"
                   parent="asset.menu_maintenance_config"
                   action="action_mecanic_timesheet"
-                  groups="base.group_no_one"/>
+                  groups="fleet.group_fleet_manager"/>
 
-        <menuitem id="estate_dailure_code" name="Master Failure And Priority Code"
+        <menuitem id="estate_failure_code" name="Master Failure And Priority Code"
                   parent="asset.menu_maintenance_config"
                   action="action_estate_failure_code"
-                  groups="base.group_no_one"/>
+                  groups="fleet.group_fleet_manager"/>
 
     </data>
 </openerp>
