--- a/estate_workshop/views/estate_workshop_procurement.xml
+++ b/estate_workshop/views/estate_workshop_procurement.xml
@@ -10,10 +10,10 @@
             <field name="arch" type="xml">
                 <tree string="Procurement Lines" colors="red:date_planned&lt;current_date and state == 'exception';black:state=='running';darkgreen:state=='confirmed';gray:state in ['done','cancel'];blue:state == 'ready'">
                     <field name="date_planned" widget="date"/>
-                    <field name="order_id" string="Maintenance Order"/>
+                    <field name="order_id" options="{'no_create_edit': True}" string="Maintenance Order"/>
                     <field name="origin"/>
-                    <field name="product_id"/>
-                    <field name="product_qty"/>
+                    <field name="product_id" options="{'no_create_edit': True}" />
+                    <field name="product_qty" options="{'no_create_edit': True}" />
                     <field name="product_uom" string="Unit of Measure"/>
                     <field name="state"/>
                 </tree>
@@ -35,9 +35,9 @@
                     <sheet>
                     <group>
                         <group>
-                            <field name="order_id" string="Maintenance Order"/>
-                            <field name="product_id" />
-                            <label for="product_qty"/>
+                            <field name="order_id" options="{'no_create_edit': True}" string="Maintenance Order"/>
+                            <field name="product_id" options="{'no_create_edit': True}"  />
+                            <label for="product_qty" options="{'no_create_edit': True}"/>
                             <div>
                                 <div>
                                     <field name="product_qty" class="oe_inline"/>
@@ -51,8 +51,8 @@
                             </div>
                         </group>
                         <group>
-                            <field name="warehouse_id" />
-                            <field name="location_id" domain="[('usage', '=', 'internal')]"/>
+                            <field name="warehouse_id" options="{'no_create_edit': True}" />
+                            <field name="location_id" options="{'no_create_edit': True}" domain="[('usage', '=', 'internal')]"/>
                             <field name="route_ids" widget="many2many_tags"/>
                         </group>
                         <group name="scheduling" string="Scheduling">
@@ -69,11 +69,11 @@
                             <group>
                                 <group>
                                     <field name="origin" placeholder="e.g. SO005"/>
-                                    <field name="group_id" groups="base.group_no_one"/>
+                                    <field name="group_id" options="{'no_create_edit': True}" groups="base.group_no_one"/>
                                 </group>
                                 <group>
                                      <field name="rule_id"/>
-                                    <field name="company_id" groups="base.group_multi_company" widget="selection"/>
+                                    <field name="company_id" options="{'no_create_edit': True}" groups="base.group_multi_company" widget="selection"/>
                                 </group>
                             </group>
                         </page>
