--- a/estate_workshop/views/inherit_hr_contract.xml
+++ b/estate_workshop/views/inherit_hr_contract.xml
@@ -25,7 +25,7 @@
              <field name="inherit_id" ref="hr_contract.hr_contract_view_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='working_hours']" position="after">
-                     <field name="active" string="Active" />
+                     <field name="contract_active" invisible="1" string="Active" />
                  </xpath>
              </field>
          </record>
